--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,8 @@
 {
   "dependencies": {
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/platform-express": "^11.1.3",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
-    "typescript": "^5.8.3"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^11.0.7"
-  },
-  "scripts": {
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:prod": "node dist/main",
-    "build": "tsc"
+    "@nestjs/typeorm": "^11.0.0",
+    "dotenv": "^16.5.0",
+    "pg": "^8.16.2",
+    "typeorm": "^0.3.25"
   }
 }
