--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-# .gitignore
+.gitignore
 
 DATABASE_URL=postgresql://user:password@db.supabase.co:5432/db_name
 FRONTEND_URL=https://pet-project-1-wine.vercel.app
